# ZTail-Lib

./: Makefile  README.md  ZTail-Lib.cabal
examples/: ztail-raw.hs  ztail.hs
src/: ZTail.hs
src/ZTail/: Display.hs  Tail.hs  TailHandle.hs  TailTypes.hs  Util.hs  ZTail.hs
